--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,3 +150,17 @@
   margin-left: 100px;
   margin-right: 100px;
 }
+
+.submitButton {
+  background-color: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 25px;
+  margin-left: 68%;
+  margin-right: 100px;
+  cursor: pointer;
+}
