--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,12 +50,16 @@
 }
 a {
   text-decoration: none;
+  color: white;
 }
 
 .questions {
-  margin: 0 auto;
+  margin-top: 150px;
+
   height: 100%;
   width: 50%;
+  margin-right: 25%;
+  margin-left: 25%;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 15px;
   letter-spacing: 1px;
@@ -73,72 +77,118 @@ a {
   font-size: 10px;
   color: gray;
 }
-
+.hover:hover {
+  opacity: 0.7;
+}
 .sideBar {
-  height: 100%;
-  width: 150px;
+  height: 50px;
+  width: 100%;
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #474747;
+  background-color: rgb(107, 8, 8);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.buttonHolder {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 20px;
+  right: 0;
 }
 
 .content {
-  margin-left: 150px;
   position: absolute;
   height: 100%;
-  width: 90%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 10, 44, 0.918);
+}
+.contentQuiz {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: white;
+}
+.contentHome {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 10, 44, 0.918);
+  overflow: hidden;
 }
 
 .sideBarButtons {
-  background-color: white;
   width: 100px;
   height: 30px;
   text-align: center;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size: 20px;
-  background: white;
+  transition: all 0.6s;
   margin: 0 auto;
-  margin-top: 30px;
+  margin: 0px 15px;
 }
 
-.leftSide {
-  width: 50%;
-  height: 100%;
+.topSide {
+  width: 100%;
+  height: 50%;
   position: absolute;
+  align-items: flex-start;
+  top: 0;
+  flex-direction: row;
+  padding-top: 50px;
+  color: white;
+  text-align: center;
 }
 
 .video {
-  display: block;
-  margin: 0 auto;
-  border-color: red;
-  border-width: 50px;
+  position: center;
+  border-color: rgb(165, 12, 12);
+  border-width: 30px;
   height: 400px;
-  width: 70%;
-  margin-top: 100px;
+  width: 700px;
+  left: 300px;
+  margin: 0;
 }
 
-.rightSide {
-  width: 50%;
-  height: 100%;
-  margin-left: 50%;
+.bottomHalf {
+  align-items: flex-end;
+  width: 100%;
+  height: 50%;
+  bottom: 0;
   position: absolute;
+  flex-direction: row;
+  text-align: center;
 }
 
 .welcome {
-  margin: 0 auto;
   text-align: center;
-  margin-top: 100px;
   font-family: "Raleway", sans-serif;
+  color: white;
 }
 
 .frontTitle {
-  font-size: 100px;
+  font-size: 600px;
   margin: 0 auto;
   text-align: center;
   font-family: "Raleway", sans-serif;
   font-size: 100px;
   font-style: oblique;
+  color: white;
 }
 
 .margin50 {
@@ -152,6 +202,9 @@ a {
   margin-top: 50px;
   margin-left: 100px;
   margin-right: 100px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 30px;
+  color: white;
 }
 
 .submitButton {
@@ -160,18 +213,17 @@ a {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  float: right;
   font-size: 16px;
-  margin-top: 25px;
-  margin-left: 68%;
-  margin-right: 100px;
+
   cursor: pointer;
 }
 
 .popUp {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  z-index: 20;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
   display: flex;
   justify-content: center;
@@ -179,14 +231,11 @@ a {
 }
 .whitePopup {
   background: white;
-  border-color: red;
-  border-style: outset;
-  border-width: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 40%;
+  margin: 30%;
   height: 40%;
   display: flex;
-  margin-right: 10%;
-  margin-bottom: 5%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -225,34 +274,22 @@ a {
 
 .congratsPopupBox {
   background: white;
-  border-color: red;
-  border-style: outset;
-  border-width: 20px;
+  /* border-style: solid;
+  border-color: rgb(216, 153, 153) rgb(107, 8, 8) rgb(107, 8, 8) red;
+  border-width: 20px; */
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
   width: 70%;
   height: 70%;
   display: flex;
-  margin-right: 10%;
-  margin-bottom: 5%;
+  margin: 15%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   text-align: center;
 }
-.reportPopup {
-  background: white;
-  border-color: red;
-  border-style: outset;
-  border-width: 20px;
-  width: 70%;
-  height: 70%;
-  display: flex;
-  margin-right: 10%;
-  margin-bottom: 5%;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
+
 .screenPopUp {
   position: fixed;
   width: 100%;
@@ -260,18 +297,17 @@ a {
   background-color: white;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 .questionReport {
   height: 100%;
-  width: 50%;
+  width: 100%;
   margin-right: 40%;
-  margin-top: 1%;
 }
 .timerOnReport {
   width: 200px;
   height: 20px;
   text-align: center;
-  margin-top: 0%;
   align-items: center;
 }
 .timerAndScore {
@@ -280,4 +316,103 @@ a {
   text-align: center;
   align-items: center;
   margin-right: 7%;
+}
+.setting {
+  width: 100%;
+
+  margin-top: 50px;
+  border-bottom: black 1px solid;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+}
+
+.print {
+  visibility: visible;
+}
+.fblaWeb {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  right: 0;
+  flex-direction: row;
+  top: 0;
+  color: white;
+}
+
+.congrats {
+  font-size: 50px;
+  border-bottom: black 1px solid;
+  padding-bottom: 7px;
+  padding-right: 60px;
+  padding-left: 60px;
+}
+.congratsSubtitle {
+  margin-top: -11px;
+}
+
+.timeTaken {
+  margin-top: -12px;
+}
+
+.mainReportDiv {
+  width: 70%;
+  margin-left: 15%;
+  background-color: white;
+  margin-right: 15%;
+  z-index: 60;
+  padding-top: 30px;
+  height: 100%;
+}
+
+.popUpReport {
+  position: absolute;
+  z-index: 60;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+.timeAndScore {
+  width: 100%;
+  text-align: center;
+}
+
+.printButton {
+  color: black;
+  border: black 1px solid;
+  padding: 5px;
+  transition: all 0.7s;
+}
+
+button {
+  border: none;
+  box-shadow: none;
+  border: rgb(107, 8, 8) 1px solid;
+  padding: 6px;
+  text-align: center;
+  color: rgb(107, 8, 8);
+  transition: all 0.5s;
+  background: transparent;
+}
+
+button:hover {
+  background: rgb(107, 8, 8);
+  color: white;
+}
+
+@page {
+  size: auto;
+  margin: 20mm;
 }
